--- a/week03/task3.html
+++ b/week03/task3.html
@@ -121,7 +121,7 @@
         </section>
     </main>
     <footer>
-        &copy;<span id="year"></span> | Functions | Lesson 3
+        <span id="year"></span> | Functions | Lesson 3
     </footer>
     <script src="scripts/main.js"></script>
     <script src="scripts/task3.js"></script>
