--- a/week04/task4.html
+++ b/week04/task4.html
@@ -32,7 +32,7 @@
             </div>
             <div>
                 <label>Favorite Foods:</label>
-                <ul id="favFoods"></ul>
+                <ul id="favorite-Foods"></ul>
             </div>
             <div>
                 <label>Hobbies:</label>
