--- a/week05/task5.html
+++ b/week05/task5.html
@@ -30,7 +30,7 @@
                 Today is <span id="message2"></span>.
             </h2>
             <h3>
-                <span id="message1">Hello World</span>
+                <span id="message1"></span>
             </h3>
         </section>
         <hr>
