--- a/week06/task6.html
+++ b/week06/task6.html
@@ -7,7 +7,30 @@
     <title>CSE121b Final Project</title>
 </head>
 <body>
-    <H1>The Car Calculator</H1>
-    <section class="output"></section>
+    <header>
+        <H1>The USed Car Calculator</H1>
+        
+    </header>
+    <main>
+        <h2>How to spot the best value in a used car:</h2>
+        <h3>A couple weeks ago our family car finally broke down. We will forever remember fondly the 2003 Pontiac Vibe that faithfully served our family for 12 years. The timing was fortuitous, however, as we are expecting our fourth child, and so a 5-passenger vehicle would no longer work for our entire family. So, with heavy hearts, we set off to find something that would seat our family and hopefully serve us as well as our dear Vibe. </h3>
+        <br> 
+        <h3>To help with our search, I devised a formula to help us sift through a web of 
+        <label id="mileage"></label>
+        <section>
+            <h2>
+                Today is <span id="message2"></span>.
+            </h2>
+            <h3>
+                <span id="message1"></span>
+            </h3>
+        </section>
+        <section class="output"></section>
+    </main>
+    <footer>
+
+    </footer>
+    <script src="main.js"></script>
+    
 </body>
 </html>
