--- a/week06/task6.html
+++ b/week06/task6.html
@@ -36,6 +36,7 @@
                 <h2>
                     Car Value Genie
                 </h2>
+                <div id="message"></div>
                 <label>Enter vehicle year, make & model: <input type="text" id="vehicleName">
                 </label>
                     <br>
@@ -48,8 +49,9 @@
                 </label>
                     <br>
                     <br>
-                <label><button id="calculate">Calculate</button></label>
+                <button id="calculate">Calculate</button>
                 <p>Value: <span id="vehicleValue"></span></p>
+                
             </div>
         </section>
         
