--- a/week06/task6.html
+++ b/week06/task6.html
@@ -51,11 +51,11 @@
             <div style="display:inline-block">
                 <h2>Car values: </h2>
                 <br>
-                <p>First place: <span id="firstPlace"></span></p>
-                <p>Second place: <span id="secondPlace"></span></p>
-                <p>Third place: <span id="thirdPlace"></span></p>
-                <p>Fourth place: <span id="fourthPlace"></span></p>
-                <p>Fifth place: <span id="fifthPlace"></span></p>
+                <p>Vehicle 1: <span id="vehicle5"></span></p>
+                <p>Vehicle 2: <span id="vehicle4"></span></p>
+                <p>Vehicle 3: <span id="vehicle3"></span></p>
+                <p>Vehicle 4: <span id="vehicle2"></span></p>
+                <p>Vehicle 5: <span id="vehicle1"></span></p>
             </div>
         </section>
         
