--- a/week06/task6.html
+++ b/week06/task6.html
@@ -26,7 +26,7 @@
         <hr>
 
         <section>
-            <div class="container">
+            <div class="container", id="form">
                 <h2>
                     Car Value Genie
                 </h2>
@@ -44,6 +44,7 @@
                     <br>
                     <br>
                 <button id="calculate">Calculate</button>
+                <button id="reset">Reset</button>
                 <p>Value: <span id="vehicleValue"></span></p>
                 <br>
                 
