form HTML element

--- a/week06/task6.html
+++ b/week06/task6.html
@@ -26,7 +26,7 @@
         <hr>
 
         <section>
-            <div class="container", id="form">
+            <form id="form">
                 <h2>
                     Car Value Genie
                 </h2>
@@ -48,7 +48,7 @@
                 <p>Value: <span id="vehicleValue"></span></p>
                 <br>
                 
-            </div>
+            </form>
             <div style="display:inline-block">
                 <h2>Car values: </h2>
                 <br>
